@@ -85,7 +85,7 @@ func IsDebugging() bool {                                                       
 // Print the warning message if running in "debug" mode.
 func (e *Engine) debugPrintWARNINGNew() {                                                                                                                                                                   │~                             
     if IsDebugging() {                                                                                                                                                                                      │~                             
-        e.logWriter.errorWriter("debug", `[WARNING] Running in "debug" mode. Switch to "release" mode in production.                                                                                        │~                             
+        e.logWriter.errorWriter("debug", `Running in "debug" mode. Switch to "release" mode in production.                                                                                        │~                             
                 - using env: export sysadm_ServerMode=release                                                                                                                                               │~                             
                 - or using code:  sysadmServer.SetMode(sysadmServer.ReleaseMode)                                                                                                                            │~                             
         `)                                                                                                                                                                                                  │~                             
